yaml/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: donggu-ns
  labels:
    app: donngu
