yaml/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: donggu-ns
  name: nginx-petclinic-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-petclinic
  template:
    metadata:
      labels:
        app: nginx-petclinic
    spec:
      containers:
      - name: nginx-petclinic
        image: dorong9/rapa:k8snginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: donggu-ns
  name: nginx-petclinic
spec:
  selector:
    app: nginx-petclinic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30010
  type: NodePort
