yaml/tomcat-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: donggu-ns
  name: tomcat-petclinic-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat-petclinic
  template:
    metadata:
      labels:
        app: tomcat-petclinic
    spec:
      containers:
        - name: tomcat-petclinic
          image: dorong9/rapa:k8stomcat
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: donggu-ns
  name: tomcat-petclinic
spec:
  selector:
    app: tomcat-petclinic
  ports:
    - name: nginx
      port: 8080
      targetPort: 8080
  type: ClusterIP
