yaml/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: donggu-ns
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: www.donggu.pri
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-petclinic
              port:
                number: 80
